<resources>
    <string name="app_name">Real Estate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="chats_list">Chats List</string>
    <string name="favorite_list">Favorite List</string>
    <string name="home_fragment">Home fragment</string>
    <string name="home_btn">Home</string>
    <string name="chats_btn">Chats</string>
    <string name="favarites_btn">Favarites</string>
    <string name="profile_btn">Profile</string>
    <string name="skip_now">Skip Now</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="or_continue_with">or continue with</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="default_web_client_id" />
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_signup">No Account? <b>Signup</b></string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="have_account_login">Have Account? <b>Login</b></string>
    <string name="create_ad">Create Ad</string>
    <string name="pick_up_to_10_images">Pick up to 10 images</string>
    <string name="estate">Estate</string>
    <string name="category">Category</string>
    <string name="location">location</string>
    <string name="rent_price">Rent Price</string>
    <string name="size_per_square_meter">Size per Square Meter</string>
    <string name="description">Description</string>
    <string name="post_my_ad">Post My Ad</string>

    <string name="google_map_api_key">AIzaSyCYGuQInkAqALTIc56scBK7RindqC3nrQ0</string>
    <string name="pick_location">Pick Location</string>
    <string name="done">Done</string>
    <string name="search_here">Search here...</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="the_ad_title">The Ad Title</string>
    <string name="desc_lines">The long description of the ad can be of multiple lines and it can take up to 3 lines</string>
    <string name="the_address">The Address of the Ad</string>
    <string name="size_in_square_meter">Size in square meter</string>
    <string name="price_symbol">R</string>
    <string name="price">00</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="choose_location">Choose Location</string>
    <string name="ad_details">Ad Details</string>
    <string name="address">Address</string>
    <string name="owner_description">Owner Description</string>
    <string name="full_name">Full Name</string>
    <string name="member_since">Member Since</string>
    <string name="chat">Chat</string>
    <string name="_1_3">1/3</string>
    <string name="start_typing_a_message">Start Typing a Message...</string>
</resources>