<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorGray02"
            android:scaleType="centerCrop"
            android:src="@drawable/image_grey"
            style="@style/ImageStyle_Corners_Rounded"/>

        <TextView
            android:id="@+id/estateTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imageIv"
            android:layout_toStartOf="@+id/favBtn"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/the_ad_title"/>

        <TextView
            android:id="@+id/descriptionTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageIv"
            android:layout_toStartOf="@+id/favBtn"
            android:layout_below="@id/estateTv"
            android:ellipsize="end"
            android:lines="3"
            android:text="@string/desc_lines"/>

        <ImageButton
            android:id="@+id/favBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:src="@drawable/fave_no"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/addressTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionTv"
            android:layout_toEndOf="@id/imageIv"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/the_address"/>

        <TextView
            android:id="@+id/sizeTv"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressTv"
            android:text="@string/size_in_square_meter"
            android:layout_toEndOf="@id/imageIv"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/priceSymbolTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressTv"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/sizeTv"
            android:text="@string/price_symbol"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/priceTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressTv"
            android:layout_toEndOf="@id/priceSymbolTv"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:layout_alignParentEnd="true"
            android:text="@string/dd_mm_yyyy"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/addressTv"/>



    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>