<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.LoginOptionsActivity">
    
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        android:foreground="@color/black_transparent"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_now"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:backgroundTint="@color/black_transparent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp">
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginPhoneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            app:icon="@drawable/phone_black"
            android:text="@string/continue_with_phone_number"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/continueWithLabelTv"
                android:layout_centerVertical="true"/>
            
            <TextView
                android:id="@+id/continueWithLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_continue_with"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/continueWithLabelTv"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/moreOptionsLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginEmailBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:icon="@drawable/email_black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginGoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:minHeight="@dimen/m_button_height"/>


        </LinearLayout>
        
    </LinearLayout>
        

</RelativeLayout>